--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,34 @@
 h2 {
-  color: green
+  color: green;
+  text-align: center;
+  text-decoration: underline;
+
 }
 body {
-  background: purple
+  background: white;
 }
 li {
-  color: red
+  color: red;
+}
+h1 {
+  color: blue;
+  text-align: center;
+  font-style: normal;
+  font-weight: bold;
+  font-family: fantasy;
+  font-size: 50px
+}
+p {
+  text-align: left;
+  color: indigo
+}
+li {
+  text-align: justify;
+}
+body {
+  border-width: thick;
+}
+
+p {
+  text-indent: 15pt
 }
